fix align for country stats

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -78,10 +78,12 @@ button {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
 }
 
 select {
   font-size: small;
+  align-self: center;
 }
 
 table {
